package models;

public class CashflowRate {
    private final double rate;

    public CashflowRate(final double rate) {
        this.rate = rate;
    }
}
